# branchpoilt

./: .gitignore  README.md  index.html  package.json  pnpm-lock.yaml  preview.html  vite.config.ts
.github/workflows/: build-macos.yml  release.yml
src/: App.tsx  preview.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  shell.rs  state.rs  tray.rs
src-tauri/src/commands/: git.rs  mod.rs  service.rs  settings.rs
src-tauri/src/git/: branches.rs  mod.rs  worktree.rs
src-tauri/src/process/: manager.rs  mod.rs  port.rs
src-tauri/src/watcher/: file_watcher.rs
src/components/: AnsiLine.tsx  BranchCard.tsx  BranchDetail.tsx  BranchList.tsx  CategoryPicker.tsx  CreateWorktreeDialog.tsx  LogList.tsx  LogViewer.tsx  Onboarding.tsx  PreviewFrame.tsx  SettingsPanel.tsx  SplitPreview.tsx  StatusBadge.tsx  SwimLaneBoard.tsx
src/hooks/: useDevCategories.ts  useTheme.ts
src/lib/: commands.ts  types.ts
src/styles/: global.css
